[gd_scene load_steps=3 format=3 uid="uid://cvih1dp7xwj5m"]

[ext_resource type="Script" path="res://addons/rest_pose_binder/binder.gd" id="1_ehshh"]
[ext_resource type="Script" path="res://addons/rest_pose_binder/tree_manager.gd" id="2_ahyg2"]

[node name="RestPoseBinder" type="Control" node_paths=PackedStringArray("directory_path_input", "animation_path_input", "tree_manager")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ehshh")
directory_path_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/Directory")
animation_path_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/RestPosePath")
tree_manager = NodePath("TreeManager")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Directory" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Animations Directory"

[node name="FolderBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Locate"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RestPosePath" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Rest Pose Path"
editable = false

[node name="AnimationBtn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Locate"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bind"

[node name="RefreshTreeBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Refresh Tree"

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
use_native_dialog = true

[node name="ResPosPathDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(207, 175)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.res")
use_native_dialog = true

[node name="TreeManager" type="Node" parent="." node_paths=PackedStringArray("tree", "path_input")]
script = ExtResource("2_ahyg2")
tree = NodePath("../MarginContainer/VBoxContainer/Tree")
path_input = NodePath("../MarginContainer/VBoxContainer/HBoxContainer/Directory")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/FolderBtn" to="." method="_on_folder_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/AnimationBtn" to="." method="_on_animation_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RefreshTreeBtn" to="TreeManager" method="refresh_tree"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="ResPosPathDialog" to="." method="_on_res_pos_path_dialog_file_selected"]
